[package]
authors = ["mmacedoeu <contato@mmacedo.eu.org>"]
name = "hello"
version = "0.1.0"
[build-dependencies]
rustc_version = "0.1"
vergen = "0.1"

[dependencies]
actix = "0.5"
ansi_term = "0.11"
app_dirs = "1.2"
derive-error-chain = "0.11"
env_logger = "0.5"
error-chain = "0.11"
futures = "0.1"
log = "0.4"
num_cpus = "1.8.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
target_info = "0.1"
unicode-segmentation = "1.2.1"

[dependencies.actix-web]
default_features = false
features = ["tls", "flate2-rust", "brotli"]
version = "0.6"

[dependencies.clap]
features = ["yaml"]
version = "2.31"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1